Code cleaning & bugs fixing
- fixed bug of a newsletter modal

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-  background-image: url("./images/hero.webp");
+  background-image: url("../images/hero.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -680,7 +680,7 @@ transform: scale(0.7);
   display: grid;
   place-items: center;
   position: relative;
-  background: url("./images/greeting_bckg.webp");
+  background: url("../images/greeting_bckg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
