--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -308,6 +308,7 @@ form button * {
   display: block;
   object-fit: fill;
   border: 1px solid rgba(0, 0, 0, 0.25);
+  color: transparent;
 }
 
 .single-recipe h4 {
