reorganized the folder tree and moved most of the styles to styled-components

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,189 +49,10 @@ body {
   position: relative;
 }
 
-/* ----------- Navbar ----------- */
-
-.navbar {
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  position: relative;
-}
-
-.displayWidth {
-  position: absolute;
-  bottom: 0;
-  left: 2rem;
-  width: 100px;
-  height: 50px;
-  font-size: 1.2rem;
-}
-
-.navbar .logo {
-  width: 120px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  margin-left: 4rem;
-}
-
-.navbar .logo img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  box-shadow: var(--primary-shadow);
-}
-
-.navbar form {
-  margin-left: 3rem;
-  display: flex;
-  width: 45%;
-  height: 50px;
-  border: 2px solid var(--yellow-clr);
-  box-shadow: var(--primary-shadow);
-  background-color: rgba(255, 255, 255, 0.7);
-  position: relative;
-  z-index: 2;
-}
-
-.navbar form input {
-  width: 90%;
-  height: 100%;
-  border: none;
-  outline: none;
-  color: var(--red-clr);
-  padding-left: 2rem;
-  font-size: 1.5rem;
-  text-transform: lowercase;
-  background-color: transparent;
-}
-
-.navbar form input::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #000;
-  opacity: 0.3;
-  /* Firefox */
-  font-style: italic;
-}
-
-.navbar form input:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: rgba(0, 0, 0, 0.3);
-  font-style: italic;
-}
-
-.navbar form input::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: rgba(0, 0, 0, 0.3);
-  font-style: italic;
-}
-
-form a,
-form button {
-  width: 10%;
-  height: 100%;
-}
-
-form a button {
-  width: 100%;
-  height: 100%;
-  outline: none;
-  border: none;
-  font-size: 1.5rem;
-  color: var(--yellow-clr);
-  cursor: pointer;
-  background-color: transparent;
-}
-
-form button {
-  outline: none;
-  border: none;
-  font-size: 1.5rem;
-  color: var(--yellow-clr);
-  cursor: pointer;
-  background-color: transparent;
-}
-
-form button * {
-  transform: translateY(2px);
-}
-
-.localStrBtn {
+/* .localStrBtn {
   display: none;
-}
+} */
 
-.results,
-.results--info-btn {
-  min-height: 3rem;
-  padding: 0.2rem 0.5rem 0.2rem 0.8rem;
-  display: grid;
-  place-content: center;
-  color: #fff;
-  position: absolute;
-  right: -100%;
-  top: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: all 0.5s ease-out;
-  opacity: 0;
-}
-
-.results {
-  cursor: pointer;
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-
-.results .saved-rec {
-  display: flex;
-  align-items: center;
-  font-size: 1.25rem;
-}
-
-.results .saved-rec *:first-child {
-  margin-right: 0.5rem;
-  width: 30px;
-}
-
-.results p span {
-  font-size: 1.2rem;
-  color: #f5c855;
-  font-style: italic;
-  font-weight: bold;
-  text-transform: lowercase;
-}
-
-.results--info-btn {
-  border-radius: 50%;
-  right: 0.5rem;
-  opacity: 1;
-  font-size: 1.8rem;
-}
-
-.results--info-btn img {
-  color: #f5c855;
-  width: 30px;
-  transform: translateX(-2px);
-}
-
-.results--info-btn * {
-  cursor: pointer;
-}
-
-.results--info-btn img:active {
-  transform: scale(0.7);
-}
-
-.results.show {
-  right: 0;
-  opacity: 1;
-}
-
-.results--info-btn.hide {
-  opacity: 0;
-}
 
 /* ----------- Recipes ----------- */
 
@@ -678,167 +499,6 @@ form button * {
   opacity: 1;
 }
 
-/* ----------- Greeting Modal ----------- */
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: none;
-  z-index: -10;
-}
-
-.container {
-  width: 65vw;
-  height: 80vh;
-  text-align: center;
-  display: grid;
-  place-items: center;
-  position: relative;
-  background: url("../images/greeting_bckg.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-color: #fff;
-  color: var(--red-clr);
-  position: relative;
-}
-
-.greeting {
-  width: 90%;
-  height: 85%;
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--light-grey-bcg-clr);
-  color: rgba(0, 0, 0, 0.8);
-  color: #303030;
-}
-
-.greeting img {
-  width: 180px;
-  margin: 0 auto;
-}
-
-.greeting h1 {
-  justify-self: center;
-  color: var(--yellow-clr);
-}
-
-.container form {
-  margin: 0 auto;
-  width: 70%;
-  min-width: 400px;
-  height: 40px;
-  background-color: #fff;
-  display: flex;
-  border: 2px solid var(--yellow-clr);
-}
-
-.container form input {
-  height: 100%;
-  width: 90%;
-  border: none;
-  outline: none;
-  text-align: center;
-  font-size: 1.2rem;
-  color: var(--red-clr);
-}
-
-.container form input::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #000;
-  opacity: 0.3;
-  /* Firefox */
-}
-
-.container form input:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: rgba(0, 0, 0, 0.3);
-}
-
-.container form input::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: rgba(0, 0, 0, 0.3);
-}
-
-.greeting button {
-  width: 10%;
-  height: 100%;
-  font-size: 2rem;
-  display: grid;
-  place-items: center;
-  border: none;
-  outline: none;
-  background-color: transparent;
-}
-
-.container button * {
-  transform: translateY(-0.5px);
-  color: var(--yellow-clr);
-  cursor: pointer;
-}
-
-button *:active {
-  transform: scale(0.9);
-}
-
-.container .close-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 1.5rem;
-  height: 1.5rem;
-  display: grid;
-  place-items: center;
-  background-color: var(--light-grey-bcg-clr);
-  opacity: 1;
-}
-
-.close-btn * {
-  font-size: 1.5rem;
-  color: var(--yellow-clr);
-  transform: translateX(-1px);
-  cursor: pointer;
-}
-
-.close-btn *:active {
-  transform: scale(0.9);
-}
-
-/* ----------- ERROR ----------- */
-
-.error {
-  width: 100%;
-  height: 84vh;
-  font-size: 1.4rem;
-  margin: 0 auto;
-  display: grid;
-  place-content: center;
-}
-
-.error h2 {
-  margin: 3rem 1rem 0 1rem;
-  color: #e5e5e55d;
-  color: rgba(0, 0, 0, 0.8);
-  text-align: center;
-  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
-}
-
-.error h2 span {
-  color: var(--yellow-clr);
-  letter-spacing: 1px;
-  text-decoration: underline;
-  background-color: rgba(124, 123, 123, 0.6);
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 0.2rem 0.5rem;
-  border-radius: 5px;
-  text-shadow: none;
-}
-
 /* ----------- EXTRA CLASSES ----------- */
 
 .no-select {
@@ -866,33 +526,7 @@ button *:active {
   overflow: hidden;
 }
 
-.modal.show {
-  display: grid;
-  place-items: center;
-  z-index: 10;
+.localStrBtn {
+  display: none;
 }
 
-.close-btn.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.bounce {
-  animation: bounce 1.3s ease-in-out infinite;
-  animation: bounce 1.3s linear infinite;
-}
-
-/* --------------------------------- */
-@keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.1);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
