--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -66,13 +66,13 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .navbar .logo {
+  /* .navbar .logo {
     margin-left: 3rem;
   }
 
   form input {
     font-size: 1.45rem;
-  }
+  } */
 
   .ex-recipes-container {
     padding: 4rem 2.5rem 3rem 2.5rem;
@@ -115,9 +115,9 @@
     height: 1.5rem;
   }
 
-  .container {
+  /* .container {
     width: 75vw;
-  }
+  } */
 }
 
 @media screen and (max-width: 1100px) {
@@ -150,23 +150,23 @@
     background-position: center;
   }
 
-  .navbar .logo {
+  /* .navbar .logo {
     margin-left: 2rem;
-  }
+  } */
 
-  form {
+  /* form {
     width: 50%;
-  }
+  } */
 
-  form input {
+  /* form input {
     width: 85%;
     font-size: 1.45rem;
-  }
+  } */
 
-  form a,
+  /* form a,
   form button {
     width: 15%;
-  }
+  } */
 
   .recipes-container {
     padding: 2rem 3rem 2rem 3rem;
@@ -190,22 +190,22 @@
 }
 
 @media screen and (max-width: 900px) {
-  .navbar {
+  /* .navbar {
     justify-content: center;
-  }
+  } */
 
-  .navbar .logo {
+  /* .navbar .logo {
     margin: 0;
-  }
+  } */
 
-  .navbar form {
+  /* .navbar form {
     width: 70%;
     margin-left: 0;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     bottom: -4.2rem;
-  }
+  } */
 
   .ex-recipes-container {
     padding: 6rem 2.5rem 3rem 2.5rem;
@@ -295,45 +295,45 @@
     width: 95%;
   }
 
-  .results {
+  /* .results {
     background-color: rgba(0, 0, 0, 0.4);
-  }
+  } */
 
-  .results .saved-rec {
+  /* .results .saved-rec {
     font-size: 1.2rem;
   }
 
   .results .saved-rec *:first-child {
     width: 25px;
-  }
+  } */
 
   .single-rec-link-img {
     width: 1.8rem;
     height: 1.8rem;
   }
 
-  .container {
+  /* .container {
     width: 85vw;
   }
 
   .container h3 {
     margin: 0 1rem;
-  }
+  } */
 
-  .greeting img {
+  /* .greeting img {
     width: 160px;
-  }
+  } */
 }
 
 @media screen and (max-width: 768px) {
-  form {
+  /* form {
     width: 65%;
   }
 
   form input {
     padding-left: 1rem;
     font-size: 1.25rem;
-  }
+  } */
 
   .recipes-container {
     padding: 5rem 2rem 2rem 2rem;
@@ -406,19 +406,19 @@
     margin: 0.5rem 4rem;
   }
 
-  .container {
+  /* .container {
     height: 70vh;
-  }
+  } */
 }
 
 @media screen and (max-width: 600px) {
-  form {
+  /* form {
     width: 80%;
   }
 
   form input {
     font-size: 1.35rem;
-  }
+  } */
 
   .results-container,
   .recipes-center {
@@ -437,13 +437,13 @@
     min-height: 16rem;
   }
 
-  .results .saved-rec {
+  /* .results .saved-rec {
     font-size: 1.1rem;
-  }
+  } */
 
-  .results .saved-rec *:first-child {
+  /* .results .saved-rec *:first-child {
     width: 22px;
-  }
+  } */
 
   .link {
     justify-content: space-between;
@@ -473,22 +473,22 @@
     min-height: 80px;
   }
 
-  .container form {
+  /* .container form {
     width: 60%;
     min-width: 350px;
-  }
+  } */
 
-  .greeting img {
+  /* .greeting img {
     width: 150px;
-  }
+  } */
 
-  .container form input {
+  /* .container form input {
     width: 85%;
-  }
+  } */
 
-  .greeting button {
+  /* .greeting button {
     width: 15%;
-  }
+  } */
 }
 
 @media screen and (max-width: 550px) {
@@ -520,23 +520,23 @@
     padding: 0;
   }
 
-  .container form {
+  /* .container form {
     width: 60%;
     min-width: 320px;
-  }
+  } */
 }
 
 @media screen and (max-width: 480px) {
-  .navbar form {
+  /* .navbar form {
     width: 76%;
     height: 40px;
   }
 
   .navbar form input {
     font-size: 1.2rem;
-  }
+  } */
 
-  .results {
+  /* .results {
     font-size: 0.9rem;
   }
 
@@ -551,7 +551,7 @@
   .results .saved-rec *:first-child {
     width: 20px;
     margin-right: 0.2rem;
-  }
+  } */
 
   .recipes-container {
     padding: 5rem 1rem 2rem 1rem;
@@ -575,20 +575,20 @@
     margin-left: 0.5rem;
   }
 
-  .container {
+  /* .container {
     width: 95vw;
-  }
+  } */
 
-  .container h2 {
+  /* .container h2 {
     font-size: 1.4rem;
     margin: 0 1rem;
-  }
+  } */
 }
 
 @media screen and (max-width: 430px) {
-  .navbar form {
+  /* .navbar form {
     width: 80%;
-  }
+  } */
 
   .results-container,
   .recipes-center {
@@ -607,7 +607,7 @@
     min-height: 15rem;
   }
 
-  .results .saved-rec {
+  /* .results .saved-rec {
     font-size: 0.9rem;
     flex-direction: column;
   }
@@ -616,17 +616,17 @@
     width: 18px;
     margin-right: 0;
     margin-bottom: 0.5rem;
-  }
+  } */
 
   .ex-total-ingredients {
     grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
     grid-template-rows: repeat(auto-fit, minmax(100px, 200px));
   }
 
-  .container .greeting {
+  /* .container .greeting {
     width: 95%;
     height: 88%;
-  }
+  } */
 }
 
 @media screen and (max-width: 400px) {
@@ -643,7 +643,7 @@
     margin-right: 1rem;
   }
 
-  .navbar form {
+  /* .navbar form {
     width: 90%;
   }
 
@@ -653,12 +653,12 @@
 
   .navbar form button {
     font-size: 1.3rem;
-  }
+  } */
 
   .recipes-container {
     padding: 5rem 0.5rem 2rem 0.5rem;
   }
-
+/* 
   .results {
     font-size: 0.8rem;
     padding: 0.2rem 0.1rem 0.2rem 0.3rem;
@@ -666,14 +666,14 @@
 
   .results p span {
     font-size: 1rem;
-  }
+  } */
 
-  .container form {
+  /* .container form {
     min-width: 280px;
-  }
+  } */
 }
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
   0% {
     opacity: 0;
   }
@@ -681,4 +681,4 @@
   100% {
     opacity: 1;
   }
-}
+} */
