--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,456 +49,6 @@ body {
   position: relative;
 }
 
-/* .localStrBtn {
-  display: none;
-} */
-
-
-/* ----------- Recipes ----------- */
-
-.recipes-container {
-  padding: 3rem 7rem 3rem 7rem;
-  min-height: 84vh;
-  display: grid;
-  place-items: center;
-}
-
-.recipes-center,
-.results-container {
-  width: 80%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(17.5rem, 1fr));
-  justify-items: center;
-}
-
-.recipes-center {
-  grid-gap: 2rem;
-}
-
-.loadMore-btn {
-  width: 16rem;
-  min-width: 16rem;
-  min-height: 13rem;
-  background-color: var(--light-grey-bcg-clr);
-  font-size: 2.2rem;
-  margin: 1rem;
-  border: 10px solid rgba(255, 255, 255, 0.1);
-  box-shadow: var(--secondary-shadow);
-}
-
-.loadMore-btn:hover {
-  box-shadow: var(--tertiary-shadow);
-}
-
-.loadMore-btn div {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.loadMore-btn div:hover {
-  cursor: pointer;
-  color: rgba(0, 0, 0, 1);
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.loadMore-btn div:active * {
-  transform: scale(0.95);
-}
-
-.loadMore-btn div img {
-  display: block;
-  width: 70%;
-}
-
-/* ----------- Single Recipe ----------- */
-
-.single-recipe {
-  min-width: 16rem;
-  max-width: 16rem;
-  max-height: 13rem;
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-  border: 10px solid var(--light-grey-bcg-clr);
-  box-shadow: var(--secondary-shadow);
-}
-
-.single-recipe img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: fill;
-  border: 1px solid rgba(0, 0, 0, 0.25);
-  color: transparent;
-}
-
-.single-recipe h4 {
-  margin-bottom: 0.5rem;
-}
-
-.single-recipe p {
-  margin-bottom: 0;
-  color: var(--yellow-clr);
-}
-
-.single-rec-info a {
-  color: #fff;
-}
-
-.single-rec-link-img {
-  width: 1.7rem;
-  height: 1.7rem;
-  margin: 0.1rem;
-}
-
-.single-rec-info:hover .single-rec-link-img {
-  color: var(--yellow-clr);
-}
-
-.single-rec-info {
-  position: absolute;
-  width: 100%;
-  padding: 1rem;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  transform: translateY(100%);
-  transition: var(--transition);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: default;
-}
-
-.single-recipe:hover {
-  box-shadow: var(--tertiary-shadow);
-}
-
-.single-recipe:hover .single-rec-info {
-  transform: translateY(0);
-}
-
-/* -----------  Exact Recipe  ----------- */
-
-.ex-recipes-container {
-  padding: 4rem 7rem 3rem 7rem;
-  min-height: 84vh;
-}
-
-.ex-recipe-center {
-  width: 70%;
-  margin: 0 auto;
-  display: grid;
-  padding: 1rem;
-  gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 4;
-  background-color: var(--light-grey-bcg-clr);
-  color: #000;
-  box-shadow: var(--secondary-shadow);
-}
-
-.ex-recipe-img {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  border: 2px solid rgba(0, 0, 0, 0.6);
-  box-shadow: var(--primary-shadow);
-}
-
-.ex-recipe-img img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
-}
-
-.ex-recipe-info {
-  cursor: default;
-  grid-column: 2/4;
-  grid-row: 1/2;
-  padding: 1rem 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  line-height: 1.5;
-  font-size: 1.2rem;
-  position: relative;
-}
-
-.ex-recipe-info h1 {
-  width: 80%;
-  letter-spacing: 1px;
-  margin-bottom: 1rem;
-  color: var(--red-clr);
-  line-height: 1;
-  font-size: 2rem;
-}
-
-.checkbox-container {
-  width: 12%;
-  max-width: 55px;
-  height: 20%;
-  max-height: 55px;
-  min-width: 45px;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: rgba(0, 0, 0, 0.5);
-  background-color: var(--light-grey-bcg-clr);
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.checkbox-container a {
-  display: grid;
-  place-items: center;
-}
-
-.checkbox-container.background {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.checkbox-container img {
-  cursor: pointer;
-  width: 35px;
-  transform: translateY(-1px);
-}
-
-.checkbox-container img:active {
-  transform: scale(0.8);
-}
-
-.checkbox-container p {
-  cursor: default;
-  font-size: 0.9rem;
-  position: absolute;
-  bottom: -1.5rem;
-  left: 50;
-  opacity: 0;
-}
-
-.checkbox-container p.show,
-.checkbox-container a p.show {
-  opacity: 1;
-}
-
-.ex-short-info {
-  width: 100%;
-  text-transform: capitalize;
-  margin-bottom: 1rem;
-}
-
-.ex-short-info p {
-  display: flex;
-  align-items: center;
-}
-
-.ex-short-info p *:first-child {
-  margin-right: 0.5rem;
-}
-
-.ex-short-info .time,
-.ex-short-info .calories {
-  text-transform: lowercase;
-}
-
-.ex-health-labels {
-  cursor: default;
-  width: 100%;
-  font-size: 1rem;
-  background-color: var(--olive-clr);
-  padding: 0 0.5rem;
-  box-shadow: var(--checkBox-shadow);
-}
-
-/* ----------- LINK  ----------- */
-/* ex-recipe-info */
-
-.link {
-  display: flex;
-  align-items: center;
-  margin-top: 0.5rem;
-  align-items: center;
-  font-size: 1.2rem;
-}
-
-.link p {
-  display: flex;
-  align-items: center;
-}
-
-.link a {
-  text-decoration: none;
-  color: var(--red-clr);
-  font-style: italic;
-  margin-left: 0.5rem;
-  display: flex;
-  align-items: center;
-}
-
-.link a *:last-child {
-  margin-left: 0.5rem;
-}
-
-.link div {
-  margin-left: 2rem;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  font-size: 1rem;
-  position: relative;
-  box-shadow: var(--checkBox-shadow);
-}
-
-.link div p:first-child {
-  border-radius: 5%;
-  background-color: var(--olive-clr);
-  padding: 0.2rem 0.5rem;
-  text-align: center;
-}
-
-.link div p:last-child {
-  position: absolute;
-  color: rgba(0, 0, 0, 0.4);
-  bottom: -1.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: all 0.1s linear;
-  opacity: 0;
-}
-
-.link div p:first-child:hover {
-  background-color: rgba(104, 176, 102, 0.7);
-}
-
-.link div p:not(p:last-child):active {
-  transform: scale(0.9);
-}
-
-.link div p:last-child.copied {
-  opacity: 1;
-}
-
-.ex-recipe-nutrition {
-  cursor: default;
-  grid-column: 1/2;
-  grid-row: 2/4;
-  padding: 0.5rem 0;
-  background-color: var(--light-grey-bcg-clr);
-}
-
-.ex-recipe-nutrition h2 {
-  color: #000;
-  margin-left: 0.5rem;
-}
-
-.ex-recipe-nutrition button {
-  width: 50%;
-  padding: 0.2rem;
-  text-transform: uppercase;
-  font-size: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.4);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem auto;
-  background-color: transparent;
-}
-
-.ex-recipe-nutrition button:hover {
-  cursor: pointer;
-  background-color: rgba(246, 186, 5, 0.6);
-}
-
-.ex-total-nutrients {
-  width: 100%;
-}
-
-.ex-total-nutrients p {
-  letter-spacing: 0.5px;
-  font-size: 1.1rem;
-  margin-left: 0.5rem;
-  line-height: 1.3;
-  transition: all 0.1s ease-in-out;
-  cursor: default;
-  opacity: 0.7;
-}
-
-.ex-total-nutrients p:hover {
-  opacity: 1;
-}
-
-.ex-recipe-ingredients {
-  cursor: default;
-  grid-column: 2/4;
-  grid-row: 2/4;
-}
-
-.ex-recipe-ingredients h2 {
-  margin-left: 0.5rem;
-  color: #000;
-}
-
-.ex-total-ingredients {
-  width: 100%;
-  padding: 1rem 0;
-  display: grid;
-  place-content: center;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 290px));
-  grid-template-rows: repeat(auto-fit, minmax(100px, 290px));
-  background-color: var(--light-grey-bcg-clr);
-}
-
-.ex-ingredient {
-  padding: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.ex-ingredient-img {
-  width: 60%;
-  border-radius: 50%;
-  border: 2px solid var(--light-grey-bcg-clr);
-  overflow: hidden;
-}
-
-.ex-ingredient-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.ex-ingredient:hover .ex-ingredient-img {
-  border: 2px solid black;
-}
-
-.ex-ingredient p {
-  margin-top: 0.5rem;
-  text-align: center;
-  width: 100%;
-  transition: all 0.1s ease-in-out;
-  opacity: 0.7;
-}
-
-.ex-ingredient:hover p {
-  opacity: 1;
-}
-
 /* ----------- EXTRA CLASSES ----------- */
 
 .no-select {
@@ -526,7 +76,8 @@ body {
   overflow: hidden;
 }
 
-.localStrBtn {
-  display: none;
+@media screen and (max-width: 992px) {
+  body {
+    background-position: center;
+  }
 }
-
