--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
   padding: 0;
   box-sizing: border-box;
   transition: var(--transition);
-  font-family: "PT Serif", serif;
+  font-family: "Lora", serif;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -47,6 +47,20 @@ body {
   height: 100%;
   overflow-x: hidden;
   position: relative;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
 }
 
 /* ----------- EXTRA CLASSES ----------- */
