--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,9 +29,10 @@ a {
   text-decoration: none;
 }
 
-html {
-  width: 100%;
-  height: 100%;
+body,
+#root {
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
 }
 
@@ -43,22 +44,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
   position: relative;
 }
 
-body::-webkit-scrollbar {
+#root::-webkit-scrollbar {
   width: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
+#root::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 20px;
 }
 
-body::-webkit-scrollbar-track {
+#root::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 20px;
 }
@@ -84,10 +82,6 @@ body::-webkit-scrollbar-track {
   height: 2px;
   background-color: black;
   margin: 1rem 0 1rem 1rem;
-}
-
-.no-scrolling {
-  overflow: hidden;
 }
 
 @media screen and (max-width: 992px) {
