moved hook to a parent component and improved logic

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
   --red-clr: #d1031b;
   --yellow-clr: #e5a737;
   --olive-clr: rgba(104, 176, 102, 0.4);
+  --green-clr: #007f5f;
   --light-grey-bcg-clr: rgba(255, 255, 255, 0.5);
   --primary-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --secondary-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
